IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6/23/13: Rotatevol has an option to rotate by the inverse of the specified
angles.

6/23/13: Made beadtrack exit with error if a contour has two points on a view,
just like Tiltalign does.

6/22/13: IMOD_4-5-8 and IMOD_4-6-23
6/22/13: Placed all of eTomo's initialization into the Swing event loop in
order make eTomo work with Java for Mac 1.6.0_51 (update 16) (In 4.5).
(Bug# 1717)

6/20/13: IMOD_4-6-22
6/18/13: Made a subm script to start submfg in the background in cases where
the subm alias is not available; added a man page for subm.

6/17/13: Standardized the  Mac ps command to be the same as the Linux one.
(Bug# 1714)

6/17/13: Made a new Imodkillgroup that can kill a process tree as well as a
process group, and that works on Windows without Cygwin.  Changed
Processchunks to use this for all non-queue kills, thus fixing killing on
Windows.  Also added b3dwinps and b3dtouch for eTomo to use instead of Cygwin
calls.

6/13/13: Made processchunks watch for jobs taking way too long and kill them.

6/11/13: Made processchunks able to send jobs to specific GPUs.

6/9/13: Added options to find warping transforms to Xfalign and changed
Tiltxcorr to take pairs of raw and aligned sections so that it can find
warping when only F transforms exist.

6/9/13: In Xfalign, implemented local fitting for warping transforms to avoid
bad buildup of cumulative warps over many sections, made the reference section
option work with warping, and added an ability to do robust fitting to
transform components to keep the alignment from being thrown off by isolated
aberrant images.

6/7/13: Fixed 3dmod icon missing from dock on Mac, adopted a higher-resolution
version from Mike Strauss.

6/6/13: Switched to makecomfile for the creation of patch tracking and
sirtsetup com files in eTomo.(Bug# 1705)

6/5/13: Added value for maximum distance between contour points for the
surface output of imodinfo.
